traces/bug_679.txt
examples++-load/ff-Ipopt.cpp:1046: error: DEAD_STORE
  The value written to &iprint (type long) is never used.
Showing all 1 steps of the trace


examples++-load/ff-Ipopt.cpp:1046:13: Write of unused value
1044.               }
1045.               
1046.               long iprint = verbosity;
                    ^
1047.               
1048.               ScalarFunc *ffJ=0;
